set fixed height for cases-slider on mobile phone

--- a/dieprojektfabrik/src/scss/_cases-slider.scss
+++ b/dieprojektfabrik/src/scss/_cases-slider.scss
@@ -176,6 +176,9 @@
 .post-type-page {
   > .uagb-slick-carousel {
     overflow: hidden !important;
+    @include media($until: 'sm') {
+      height: 640px !important;
+    }
     @include media($from: 'sm') {
       height: 735px !important;
     }
